--- a/Configs/SA8R.config
+++ b/Configs/SA8R.config
@@ -2,6 +2,7 @@ tStart 10000
 coolingRate 0.9999
 iterations 100000
 neighbourhoodSize 10
-hardConstraints 100
+hardConstraints 10
 softConstraints 1
 isAdaptive 0
+isRandom 0
